agrego rdlc de ticket y form para reportviewer

--- a/Sistema_control/Sistema_control.csproj
+++ b/Sistema_control/Sistema_control.csproj
@@ -21,6 +21,11 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Update="TicketVenta\DataSetOrdenes.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>DataSetOrdenes.xsd</DependentUpon>
+    </Compile>
   </ItemGroup>
 
   <ItemGroup>
@@ -28,6 +33,13 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="TicketVenta\DataSetOrdenes.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>DataSetOrdenes.Designer.cs</LastGenOutput>
+    </None>
   </ItemGroup>
 
 </Project>
