Primera entrega del proyecto

--- a/ly_datos/ly_datos.csproj
+++ b/ly_datos/ly_datos.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Data.SqlClient" Version="4.1.0" />
+    <PackageReference Include="ReportViewerCore.NETCore" Version="15.1.16" />
   </ItemGroup>
 
   <ItemGroup>
